# vespa

./: .clang-format  .gitignore  .java-version  .pre-commit-config.yaml  .travis.yml  ATTRIBUTIONS.md  ApplicationRepositoryTest.java  CMakeLists.txt  CONTRIBUTING.md  Code-map.md  Code-of-Conduct.md  ERRATA.md  GOVERNANCE.md  Gemfile  LICENSE  NOTICES  README-cmake.md  README-dev-on-docker.md  README-documentation.md  README.md  SECURITY.md  SIMPLE_ANNOTATIONS.md  Selection.java  SessionActiveHandlerTest.java  TODO.md  VERSION  _config.yml  annotations.html  api.html  attributes.html  boolean-library.html  boolean-search.html  bootstrap-cmake.sh  bootstrap-cpp.sh  bootstrap.sh  build.gradle  build_settings.cmake  chains-in-vespa.html  changing-live-searchdefinitions.html  concrete-documents.html  (+77 more)
client/: CMakeLists.txt  README.md  gobuild.sh  pom.xml
client/go/: .dir-locals.el  .gitattributes  .gitignore  .golangci.yaml  CMakeLists.txt  Makefile  OWNERS  README.md  build.sh  cond_make.go  go.mod  go.sum  main.go
client/go/api/: .gitignore  .golangci.yml  Makefile  README.md  Vespa.md  batch.go  batch_request.go  batch_test.go  bitbucket-pipelines.yml  client.go  client_test.go  create.go  create_batch_request.go  create_batch_request_test.go  create_test.go  delete.go  delete_test.go  get.go  get_test.go  go.mod  partial_update.go  partial_update_test.go  ranking_feature_query.go  ranking_feature_query_test.go  relevance.go  search.go  search_test.go  update.go  update_batch_request.go  update_batch_request_test.go  update_test.go  visit.go  visit_test.go  weakand.go  weakand_test.go
client/go/auth/: auth.go  secrets.go  token.go
client/go/auth0/: auth0.go
client/go/cli/: cli.go
client/go/cmd/: activate.go  api_key.go  api_key_test.go  auth.go  cert.go  cert_test.go  clone.go  clone_list.go  clone_list_test.go  clone_test.go  command_tester.go  command_tester_test.go  config.go  config_test.go  curl.go  curl_test.go  deploy.go  deploy_test.go  document.go  document_test.go  helpers.go  init.go  (+23 more)
config-model/: .gitignore  CMakeLists.txt  OWNERS  README  build.gradle  fix-from-to.sh  pom.xml  remove-indexes-from-temp-files.sh
config-model/src/: Makefile
config-provisioning/: .gitignore  CMakeLists.txt  OWNERS  README  abi-spec.json  build.gradle  pom.xml
configserver/: .gitignore  CMakeLists.txt  README  build.gradle  pom.xml
container-core/: .gitignore  CMakeLists.txt  OWNERS  README.md  abi-spec.json  build.gradle  pom.xml
container-di/: CMakeLists.txt  README.md  abi-spec.json  build.gradle  pom.xml
container-disc/: CMakeLists.txt  README.md  abi-spec.json  build.gradle  leakage-spec.json  pom.xml
container-disc/mcp-server/: pom.xml
container-messagebus/: CMakeLists.txt  OWNERS  README  README.md  build.gradle  pom.xml
container-search/: .gitignore  CMakeLists.txt  OWNERS  README  abi-spec.json  build-osgi-bundles.xml  build.gradle  leakage-spec.json  pom.xml
container-search-and-docproc/: CMakeLists.txt  README.md  build.gradle  pom.xml
docker-api/: CMakeLists.txt  OWNERS  build.gradle  pom.xml
docproc/: .gitignore  CMakeLists.txt  OWNERS  README  abi-spec.json  build.gradle  leakage-spec.json  pom.xml
fileacquirer/: .gitignore  CMakeLists.txt  README  abi-spec.json  build.gradle  pom.xml
fnet/ethereal/: Makefile.am  Makefile.nmake  moduleinfo.h  packet-fnetrpc.c
jdisc_http_service/: CMakeLists.txt  README.md  README.sh  abi-spec.json  build.gradle  pom.xml
jdisc_http_service/docs/: class-diagram.graffle  httpserver.html
messagebus/test/: CMakeLists.txt
metrics-proxy/: CMakeLists.txt  OWNERS  README  pom.xml
model-integration/: .gitignore  CMakeLists.txt  OWNERS  README  abi-spec.json  build.gradle  leakage-spec.json  pom.xml
node-admin/: .gitignore  CMakeLists.txt  Dockerfile.template  README.md  README_LINUX.md  README_MAC.md  build.gradle  build.sh  pom.xml  vespa-node-admin.spec
node-admin/basic-search-for-docker/: music-data-1.json  music-data-2.json
node-admin/configserver-app/: node-flavors.xml  start-config-server.sh
node-admin/include/: config-ctl.patch  deploy-music-app.sh  http-server.xml  music-on-docker-services.xml  node-flavors.xml  nodectl-instance.sh  root-bashrc  start-config-server.sh  start-services.sh
node-admin/node-admin-zone-app/: services.xml
node-admin/scripts/: app.sh  common-vm.sh  common.sh  config-server.sh  configure-container-networking.py  etc-hosts.sh  maintenance.sh  make-host-like-container.sh  network-bridge.sh  node-admin.sh  node-repo.sh  populate-noderepo-with-local-nodes.sh  route-osx.sh  setup-docker.sh  setup-route-and-hosts-osx.sh  vm.sh  zone.sh
node-admin/vespa-local/: Dockerfile.template  services.xml
simplemetrics/: CMakeLists.txt  README  abi-spec.json  build.gradle  pom.xml
vespa-feed-client-cli/: CMakeLists.txt  OWNERS  pom.xml  vespa-feed-client-dev.sh
vespabase/: CMakeLists.txt  OWNERS  README  desc.services  desc.vespa_base  desc.vespa_base_dev  vespa-base.spec
vespabase/conf/: .gitignore  default-env.txt.in  java.security.override  services.conf
vespabase/src/: .gitignore  Defaults.pm  common-env.sh  defaultManifest.mf  project.properties  rhel-prestart.sh  start-cbinaries.sh  start-tool.sh  start-vespa-base.sh  stop-vespa-base.sh  vespa-allow-downgrade-from-6-to-5.sh  vespa-configserver.service  vespa-configserver.service.in  vespa-core-dumper.sh  vespa-start-configserver.sh  vespa-start-services.sh  vespa-stop-configserver.sh  vespa-stop-services.sh  vespa.service  vespa.service.in
vespaclient/: .gitignore  CMakeLists.txt  README
vespaclient-core/: .gitignore  CMakeLists.txt  README  build.gradle  pom.xml
vespaclient/man/: vespastat.1
vespalog/: .gitignore  CMakeLists.txt  INSTALL  README  README.events  README.server.protocol  abi-spec.json  build.gradle  leakage-spec.json  pom.xml  vespa-log-utils.spec
vespalog/go/: .gitignore  Makefile  go.mod  go.sum
vespalog/src/: .gitignore  Log.pm
vespamalloc/: .clang-format  .gitignore  CMakeLists.txt  OWNERS  README
vespamalloc/etc/: vespamalloc.conf
vespamalloc/src/: .gitignore  testlist.txt
(+38300 files in other folders)
